# file_manager_odoo_16

./: .pre-commit-config.yaml  Makefile  pyproject.toml
conf/: template_odoo.conf
dev/file_manager/: __manifest__.py
dev/file_manager/models/: __init__.py  f_manage.py
dev/file_manager/security/: ir.model.access.csv
dev/file_manager/views/: manager.xml
