[tool.poetry]
name = "odoo"
version = "1.1"
description = ""
authors = ["stanislav <lettersforstanislav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
werkzeug = "^2.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
